--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,8 +8,8 @@ jobs:
       matrix:
         python-version: [3.6]
         os: [ubuntu-18.04]
-        pydantic_version: [1.8, 1.7, 1.6, 1.5]
-        sphinx_version: [2.1, 2.2, 2.3, 2.4]
+        pydantic_version: [1.8, 1.7, 1.6, 1.5, 1.0, 1.1, 1.2, 1.3, 1.4]
+        sphinx_version: [3.0]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
