--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
       matrix:
         python-version: [3.6]
         os: [ubuntu-18.04]
-        pydantic_version: [1.8, 1.7, 1.6, 1.5, 1.0, 1.1, 1.2, 1.3, 1.4]
+        pydantic_version: [1.8, 1.7, 1.6, 1.5, 1.0, 1.1, 1.2, 1.3, 1.4, 0.32.2, 0.17]
         sphinx_version: [3.0]
     runs-on: ${{ matrix.os }}
     steps:
