--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,12 +4,13 @@ on: push
 jobs:
   ci:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
+    environment: ci
     strategy:
       fail-fast: false
       matrix:
         python-version: [3.6]
         os: [ubuntu-18.04]
-        pydantic_version: [1.8, 1.7, 1.6, 1.5, 1.0, 1.1, 1.2, 1.3, 1.4, 0.32.2, 0.17]
+        pydantic_version: [1.8, 1.7, 1.6, 1.5, 1.0, 1.1, 1.2, 1.3, 1.4]
         sphinx_version: [3.0]
     runs-on: ${{ matrix.os }}
     steps:
@@ -23,4 +24,6 @@ jobs:
       - name: Install packages
         run: poetry install
       - name: run pytest
-        run: poetry run pytest
+        run: poetry run pytest --cov-report term --cov-report xml:report.xml
+      - name: upload code coverage report
+        run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r report.xml
