Respecify pytest-cov version constraint.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ pydantic = ">=1.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-pytest-cov
+pytest-cov = "^2.0"
 sphinx-rtd-theme = "^0.5.1"
 
 [build-system]
