--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,12 +6,12 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     environment: ci
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         python-version: [3.6]
         os: [ubuntu-18.04]
         pydantic_version: ["=~1.8", "=~1.7", "=~1.6", "=~1.5", "=~1.0", "@latest"]
-        sphinx_version: ["=~3.5", "=~3.0", "@latest"]
+        sphinx_version: ["=~3.5", "=~3.4", "=~3.0", "@latest"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
