--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
         python-version: [3.6]
         os: [ubuntu-18.04]
         pydantic_version: ["=~1.8", "=~1.7", "=~1.6", "=~1.5", "=~1.0", "@latest"]
-        sphinx_version: ["=~3.5", "=~3.4", "=~3.0", "@latest"]
+        sphinx_version: ["=~3.5", "=~3.4", "=~3.1", "=~3.0", "@latest"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +24,7 @@ jobs:
       - name: Install packages
         run: poetry install
       - name: run pytest
-        run: poetry run pytest --cov-report term --cov-report xml:report.xml
+        run: poetry run pytest
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@master
         with:
