Try different coverage uploader.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,4 @@ jobs:
       - name: run pytest
         run: poetry run pytest
       - name: Run codacy-coverage-reporter
-        uses: codacy/codacy-coverage-reporter-action@master
-        with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: coverage.xml
+        run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage.xml
