Yet another test uploading the coverage.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,4 @@ jobs:
       - name: run pytest
         run: poetry run pytest
       - name: Run codacy-coverage-reporter
-        run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage.xml
+        run: export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }} && bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage.xml
