--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,20 @@
 [tool.poetry]
 name = "autodoc_pydantic"
 version = "0.1.0"
-description = ""
+description = "Seamlessly integrate pydantic models in your Sphinx documentation."
 authors = ["mansenfranzen <franz.woellert@gmail.com>"]
 packages = [{ include = "sphinxcontrib" }]
+licence = "MIT"
+readme = "README.md"
+homepage = "https://github.com/mansenfranzen/autodoc_pydantic"
+repository = "https://github.com/mansenfranzen/autodoc_pydantic"
+documentation = "https://github.com/mansenfranzen/autodoc_pydantic"
+keywords = ["sphinx", "pydantic", "autodoc", "documentation", "extension"]
+classifiers = [
+    "Framework :: Sphinx :: Extension",
+    "Topic :: Documentation :: Sphinx"
+    "Topic :: Software Development :: Documentation"
+]
 
 [tool.poetry.dependencies]
 python = ">=3.6.1"
