--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,11 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
-Sphinx = ">=3.0"
-pydantic = ">=1.1"
+Sphinx = ">=3.4"
+pydantic = ">=1.5"
+
+sphinx-rtd-theme = { version = "^0.5.1", optional = true }
+sphinx-tabs = { version = "^2", optional = true }
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
@@ -30,6 +33,10 @@ sphinx-tabs = "^2"
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "--cov-report term --cov-report xml:coverage.xml --cov=sphinxcontrib"
+
+[tool.poetry.extras]
+docs = ["sphinx-rtd-theme",
+        "sphinx-tabs"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
