--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,10 @@ pydantic = ">=1.5"
 
 sphinx-rtd-theme = { version = "^0.5.1", optional = true }
 sphinx-tabs = { version = "^2", optional = true }
-myst-parser = { version = "^0.13.7", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
 pytest-cov = "^2.0"
-sphinx-rtd-theme = "^0.5.1"
-sphinx-tabs = "^2"
-myst-parser = "^0.13.7"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -39,8 +35,7 @@ addopts = "--cov-report term --cov-report xml:coverage.xml --cov=sphinxcontrib"
 
 [tool.poetry.extras]
 docs = ["sphinx-rtd-theme",
-        "sphinx-tabs",
-        "myst-parser"]
+        "sphinx-tabs"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
