--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,8 @@ pydantic = ">=1.5"
 
 sphinx-rtd-theme = { version = "^0.5.1", optional = true }
 sphinx-tabs = { version = "^2", optional = true }
-
-[tool.poetry.dev-dependencies]
-pytest = "^6.0"
-pytest-cov = "^2.0"
+pytest = {version = "^6.0", optional = true }
+pytest-cov = { version = "^2.0", optional = true }
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -36,6 +34,11 @@ addopts = "--cov-report term --cov-report xml:coverage.xml --cov=sphinxcontrib"
 [tool.poetry.extras]
 docs = ["sphinx-rtd-theme",
         "sphinx-tabs"]
+
+dev = ["pytest",
+       "pytest-cov",
+       "sphinx-rtd-theme",
+       "sphinx-tabs"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
