--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,21 +22,24 @@ python = "^3.6.1"
 Sphinx = ">=3.4"
 pydantic = ">=1.5"
 
-sphinx-rtd-theme = { version = "^0.5.1", optional = true }
+sphinx-rtd-theme = { version = "^0.5", optional = true }
 sphinx-tabs = { version = "^2", optional = true }
-pytest = {version = "^6.0", optional = true }
-pytest-cov = { version = "^2.0", optional = true }
+pytest = {version = "^6", optional = true }
+pytest-cov = { version = "^2", optional = true }
+coverage = { version ="^5", optional = true }
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--cov-report term --cov-report xml:coverage.xml --cov=sphinxcontrib"
 
 [tool.poetry.extras]
 docs = ["sphinx-rtd-theme",
         "sphinx-tabs"]
 
+test = ["pytest",
+       "coverage"]
+
 dev = ["pytest",
-       "pytest-cov",
+       "coverage",
        "sphinx-rtd-theme",
        "sphinx-tabs"]
 
