--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,6 @@ on: push
 jobs:
   test-stable-versions:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
-    environment: ci
     strategy:
       fail-fast: false
       matrix:
@@ -27,28 +26,31 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python_version }}
-      - uses: abatilo/actions-poetry@v2.0.0
-      - name: Update required deps
-        run: poetry add pydantic${{ matrix.pydantic_version }} sphinx${{ matrix.sphinx_version }}
-      - name: Install packages
-        run: poetry install -E dev
-      - name: run pytest
-        run: poetry run pytest
-      - name: Run codacy-coverage-reporter
-        run: export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }} && bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage.xml
+      - run: pip install tox
+      - run: tox -e pydantic${{ matrix.pydantic_version }}-sphinx${{ matrix.sphinx_version }}
 
-  test-latest-versions:
+  test-latest-version-with-coverage:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
+    environment: ci
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - uses: abatilo/actions-poetry@v2.0.0
-      - run: poetry add git+https://github.com/executablebooks/sphinx-tabs.git --optional
-      - run: poetry add pydantic@latest sphinx@latest
-      - name: Install packages
-        run: poetry install -E dev
-      - name: run pytest
-        run: poetry run pytest
+      - run: pip install tox
+      - run: tox -e latest
+      - run: export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }} && bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage.xml
+
+  test-development-versions-deps:
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    environment: ci
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - run: pip install tox
+      - run: tox -e development
+      - run: export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }} && bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage.xml
