--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,17 +9,17 @@ jobs:
       matrix:
         include:
           - python_version: 3.6
-            pydantic_version: "=~1.5"
-            sphinx_version: "=~3.4"
+            pydantic_version: "15"
+            sphinx_version: "34"
           - python_version: 3.7
-            pydantic_version: "=~1.6"
-            sphinx_version: "=~3.4"
+            pydantic_version: "16"
+            sphinx_version: "34"
           - python_version: 3.8
-            pydantic_version: "=~1.7"
-            sphinx_version: "=~3.4"
+            pydantic_version: "17"
+            sphinx_version: "35"
           - python_version: 3.9
-            pydantic_version: "=~1.8"
-            sphinx_version: "=~3.5"
+            pydantic_version: "18"
+            sphinx_version: "35"
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
