Add sphinx 4.0 environment and separate docs/tests extras.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39}-pydantic{15,16,17,18,latest}-sphinx{34,35,latest}, latest, development
+envlist = py{36,37,38,39}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,latest}, latest, development
 isolated_build = True
 
 [testenv]
@@ -11,6 +11,7 @@ deps =
     pydanticlatest: pydantic
     sphinx34: sphinx~=3.4.0
     sphinx35: sphinx~=3.5.0
+    sphinx40: sphinx~=4.0.0
     sphinxlatest: sphinx
 extras =
     test
@@ -22,11 +23,13 @@ commands =
 
 [testenv:latest]
 extras =
-    dev
+    test
+    docs
 
 [testenv:development]
 extras =
-    dev
+    test
+    docs
 
 deps =
     git+https://github.com/samuelcolvin/pydantic.git
