--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: continuous_integration
+name: ci
 on: push
 
 jobs:
@@ -20,6 +20,9 @@ jobs:
           - python_version: 3.9
             pydantic_version: "18"
             sphinx_version: "35"
+          - python_version: 3.9
+            pydantic_version: "18"
+            sphinx_version: "40"
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
