Add `show_versions` module and tox environment descriptions.

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,16 @@ envlist = py{36,37,38,39}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,latest}, 
 isolated_build = True
 
 [testenv]
+extras =
+    test
+commands =
+    python tests/show_versions.py
+    coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest
+    coverage report -m
+    coverage xml
+
+[testenv:pydantic{15,16,17,18,latest}-sphinx{34,35,40,latest}]
+description = "Test specific historical stable versions."
 deps =
     pydantic15: pydantic~=1.5.0
     pydantic16: pydantic~=1.6.0
@@ -13,20 +23,15 @@ deps =
     sphinx35: sphinx~=3.5.0
     sphinx40: sphinx~=4.0.0
     sphinxlatest: sphinx
-extras =
-    test
-commands =
-    python -c "import pydantic, sphinx; print('Pydantic:', pydantic.version.VERSION, 'Sphinx: ', sphinx.__version__)"
-    coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest
-    coverage report -m
-    coverage xml
 
 [testenv:latest]
+description = "Test the latest stable versions available from PyPI."
 extras =
     test
     docs
 
 [testenv:development]
+description = "Test the most recent development versions from git repositories."
 extras =
     test
     docs
