Adjust version info module path.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ isolated_build = True
 extras =
     test
 commands =
-    python tests/show_versions.py
+    python -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
     coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest
     coverage report -m
     coverage xml
