Use python in tox env for version output.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ isolated_build = True
 extras =
     test
 commands =
-    python -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
+    {envpython} -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
     coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest
     coverage report -m
     coverage xml
@@ -34,7 +34,6 @@ extras =
 description = "Test the most recent development versions from git repositories."
 extras =
     test
-    docs
 
 deps =
     git+https://github.com/samuelcolvin/pydantic.git
