Provide more verbose output for tests.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ extras =
     test
 commands =
     {envpython} -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
-    coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest
+    coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest -vv
     coverage report -m
     coverage xml
 
