--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,latest}, latest, development
+envlist = py{36,37,38,39}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,latest}, latest, development, linter
 isolated_build = True
 
 [testenv]
@@ -40,3 +40,13 @@ deps =
     git+https://github.com/sphinx-doc/sphinx.git
     git+https://github.com/executablebooks/sphinx-tabs.git
     git+https://github.com/readthedocs/sphinx_rtd_theme.git
+
+[testenv:linter]
+skip_install = true
+deps =
+    flake8
+    flake8-bugbear
+    flake8-typing-imports>=1.1
+    pep8-naming
+commands =
+    flake8 sphinxcontrib/autodoc_pydantic/
