--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,3 +56,15 @@ jobs:
           python-version: '3.x'
       - run: pip install tox
       - run: tox -e development
+
+  test-linter:
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    environment: ci
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - run: pip install tox
+      - run: tox -e linter
