--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ deps =
     git+https://github.com/samuelcolvin/pydantic.git
     git+https://github.com/sphinx-doc/sphinx.git
     git+https://github.com/executablebooks/sphinx-tabs.git
+    git+https://github.com/executablebooks/sphinx-copybutton.git
     git+https://github.com/readthedocs/sphinx_rtd_theme.git
 
 [testenv:linter]
