--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pydantic = ">=1.5"
 sphinx-rtd-theme = { version = "^0.5", optional = true }
 sphinx-tabs = { version = "^2", optional = true }
 sphinx-copybutton = { version = "^0.4", optional = true }
+sphinxcontrib-mermaid = "0.7.1"
 pytest = {version = "^6", optional = true }
 coverage = { version ="^5", optional = true }
 flake8 = { version = "^3", optional = true }
@@ -36,7 +37,8 @@ minversion = "6.0"
 [tool.poetry.extras]
 docs = ["sphinx-rtd-theme",
         "sphinx-tabs",
-        "sphinx-copybutton"]
+        "sphinx-copybutton",
+        "sphinxcontrib-mermaid"]
 
 test = ["pytest",
         "coverage"]
@@ -46,6 +48,7 @@ dev = ["pytest",
        "sphinx-rtd-theme",
        "sphinx-tabs",
        "sphinx-copybutton",
+       "sphinxcontrib-mermaid",
        "flake8",
        "tox"]
 
