Update tox.ini to support new sphinx versions.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,latest}, latest, development, linter
+envlist = py{36,37,38,39}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,41,42,latest}, latest, development, linter
 isolated_build = True
 
 [testenv]
@@ -22,6 +22,8 @@ deps =
     sphinx34: sphinx~=3.4.0
     sphinx35: sphinx~=3.5.0
     sphinx40: sphinx~=4.0.0
+    sphinx41: sphinx~=4.1.0
+    sphinx42: sphinx~=4.2.0
     sphinxlatest: sphinx
 
 [testenv:latest]
