--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ python = "^3.6.1"
 Sphinx = ">=3.4"
 pydantic = ">=1.5"
 
-sphinx-rtd-theme = { version = "^0.5", optional = true }
-sphinx-tabs = { version = "^2", optional = true }
+sphinx-rtd-theme = { version = "^1.0", optional = true }
+sphinx-tabs = "3.2"
 sphinx-copybutton = { version = "^0.4", optional = true }
 sphinxcontrib-mermaid = "0.7.1"
 pytest = {version = "^6", optional = true }
