Pin docutils to work with sphinx.

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ deps =
     pydantic18: pydantic~=1.8.0
     pydanticlatest: pydantic
     sphinx34: sphinx~=3.4.0
+    sphinx34: docutils>=0.14,<0.18
     sphinx35: sphinx~=3.5.0
     sphinx40: sphinx~=4.0.0
     sphinx41: sphinx~=4.1.0
