--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,9 +29,12 @@ jobs:
           - python_version: 3.9
             pydantic_version: "18"
             sphinx_version: "42"
+          - python_version: 3.9
+            pydantic_version: "18"
+            sphinx_version: "43"
           - python_version: "3.10"
             pydantic_version: "18"
-            sphinx_version: "42"
+            sphinx_version: "43"
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
