--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39,310}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,41,42,latest}, latest, development, linter
+envlist = py{36,37,38,39,310}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,41,42,43,latest}, latest, development, linter
 isolated_build = True
 
 [testenv]
@@ -25,6 +25,7 @@ deps =
     sphinx40: sphinx~=4.0.0
     sphinx41: sphinx~=4.1.0
     sphinx42: sphinx~=4.2.0
+    sphinx43: sphinx~=4.3.0
     sphinxlatest: sphinx
 
 [testenv:latest]
