--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,10 @@ jobs:
           python-version: ${{ matrix.python_version }}
       - run: pip install tox
       - run: tox -e pydantic${{ matrix.pydantic_version }}-sphinx${{ matrix.sphinx_version }}
+      - name: Codecov
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          fail_ci_if_error: true
 
   test-latest-version-with-coverage:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
