--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           fail_ci_if_error: true
 
-  test-latest-version-with-coverage:
+  test-latest-version:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     environment: ci
     runs-on: ubuntu-18.04
@@ -63,6 +63,20 @@ jobs:
         uses: codecov/codecov-action@v2.1.0
         with:
           fail_ci_if_error: true
+
+  test-development-versions-deps:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    environment: ci
+    runs-on: ubuntu-18.04
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - run: pip install tox
+      - run: tox -e development
+      - run: echo "Done"
 
   test-linter:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
