Add pydantic 1.9 to CI.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39,310}-pydantic{15,16,17,18,latest}-sphinx{34,35,40,41,42,43,latest}, latest, development, linter
+envlist = py{36,37,38,39,310}-pydantic{15,16,17,18,19,latest}-sphinx{34,35,40,41,42,43,latest}, latest, development, linter
 isolated_build = True
 
 [testenv]
@@ -11,13 +11,14 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:pydantic{15,16,17,18,latest}-sphinx{34,35,40,41,42,latest}]
+[testenv:pydantic{15,16,17,18,19,latest}-sphinx{34,35,40,41,42,latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic15: pydantic~=1.5.0
     pydantic16: pydantic~=1.6.0
     pydantic17: pydantic~=1.7.0
     pydantic18: pydantic~=1.8.0
+    pydantic19: pydantic~=1.9.0
     pydanticlatest: pydantic
     sphinx34: sphinx~=3.4.0
     sphinx34: docutils>=0.14,<0.18
