--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,9 @@ jobs:
           - python_version: "3.10"
             pydantic_version: "18"
             sphinx_version: "43"
+          - python_version: "3.10"
+            pydantic_version: "19"
+            sphinx_version: "43"
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
