Pin jinja dependency for sphinx<4.0 to fix CI.

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,9 @@ deps =
     pydanticlatest: pydantic
     sphinx34: sphinx~=3.4.0
     sphinx34: docutils>=0.14,<0.18
+    sphinx34: jinja2<3.1.0
     sphinx35: sphinx~=3.5.0
+    sphinx35: jinja2<3.1.0
     sphinx40: sphinx~=4.0.0
     sphinx41: sphinx~=4.1.0
     sphinx42: sphinx~=4.2.0
