--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,9 @@ jobs:
           - python_version: 3.6
             pydantic_version: "18"
             sphinx_version: "35"
+          - python_version: 3.9
+            pydantic_version: "15"
+            sphinx_version: "40"
           - python_version: 3.7
             pydantic_version: "16"
             sphinx_version: "34"
