--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,6 +48,9 @@ jobs:
           - python_version: "3.10"
             pydantic_version: "19"
             sphinx_version: "45"
+          - python_version: "3.10"
+            pydantic_version: "19"
+            sphinx_version: "50"
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
