--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39,310}-pydantic{15,16,17,18,19,latest}-sphinx{34,35,40,41,42,43,44,45, latest}, latest, development, linter
+envlist = py{36,37,38,39,310}-pydantic{15,16,17,18,19,latest}-sphinx{34,35,40,41,42,43,44,45,50, latest}, latest, development, linter
 isolated_build = True
 
 [testenv]
@@ -11,7 +11,7 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:pydantic{15,16,17,18,19,latest}-sphinx{34,35,40,41,42,43,44,45, latest}]
+[testenv:pydantic{15,16,17,18,19,latest}-sphinx{34,35,40,41,42,43,44,45,50, latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic15: pydantic~=1.5.0
@@ -31,6 +31,7 @@ deps =
     sphinx43: sphinx~=4.3.0
     sphinx44: sphinx~=4.4.0
     sphinx45: sphinx~=4.5.0
+    sphinx50: sphinx~=5.0.0
     sphinxlatest: sphinx
 
 [testenv:latest]
