--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,6 +51,12 @@ jobs:
           - python_version: "3.10"
             pydantic_version: "19"
             sphinx_version: "50"
+          - python_version: "3.10"
+            pydantic_version: "110"
+            sphinx_version:  "51"
+          - python_version: "3.10"
+            pydantic_version: "110"
+            sphinx_version:  "52"
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
