--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ dev = ["pytest",
        "flake8",
        "tox"]
 
+erd = ["erdantic"]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
