--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ isolated_build = True
 [testenv]
 extras =
     test
+    erd
 commands =
     {envpython} -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
     coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest -vv
@@ -42,11 +43,13 @@ description = "Test the latest stable versions available from PyPI."
 extras =
     test
     docs
+    erd
 
 [testenv:development]
 description = "Test the most recent development versions from git repositories."
 extras =
     test
+    erd
 
 deps =
     git+https://github.com/samuelcolvin/pydantic.git
