add erdantic github repo to testenv:development

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,8 @@ deps =
     git+https://github.com/executablebooks/sphinx-tabs.git
     git+https://github.com/executablebooks/sphinx-copybutton.git
     git+https://github.com/readthedocs/sphinx_rtd_theme.git
+    git+https://github.com/readthedocs/sphinx_rtd_theme.git
+    git+https://github.com/drivendataorg/erdantic.git
 
 [testenv:linter]
 skip_install = true
