add new sphinx versions to tests

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:pydantic{15,16,17,18,19,110,latest}-sphinx{34,35,40,41,42,43,44,45,50,51,52,latest}]
+[testenv:pydantic{15,16,17,18,19,110,latest}-sphinx{34,35,40,41,42,43,44,45,50,51,52,60,61,62,70,latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic15: pydantic~=1.5.0
@@ -35,6 +35,10 @@ deps =
     sphinx50: sphinx~=5.0.0
     sphinx51: sphinx~=5.1.0
     sphinx52: sphinx~=5.2.0
+    sphinx60: sphinx~=6.0.0
+    sphinx61: sphinx~=6.1.0
+    sphinx62: sphinx~=6.2.0
+    sphinx70: sphinx~=7.0.0
     sphinxlatest: sphinx
 
 [testenv:latest]
