Add test suite without erdantic.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37,38,39,310}-pydantic{15,16,17,18,19,110,latest}-sphinx{34,35,40,41,42,43,44,45,50,51,52,60,61,62,70,latest}, latest, development, linter
+envlist = py{37,38,39,310}-pydantic{15,16,17,18,19,110,latest}-sphinx{34,35,40,41,42,43,44,45,50,51,52,60,61,62,70,latest}, latest, development, no_erdantic, linter
 isolated_build = True
 
 [testenv]
@@ -46,6 +46,13 @@ description = "Test the latest stable versions available from PyPI."
 extras =
     test
     docs
+
+[testenv:no_erdantic]
+description = "Test without optional erdantic dependency"
+commands =
+    pip uninstall erdantic
+    {envpython} -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
+    pytest -vv
 
 [testenv:development]
 description = "Test the most recent development versions from git repositories."
