--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,6 +97,18 @@ jobs:
         with:
           fail_ci_if_error: true
 
+  test-special-version:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    environment: ci
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - run: pip install tox
+      - run: tox -e no_erdantic
+
   test-development-versions-deps:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     environment: ci
