--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -19,6 +19,17 @@
       ]
     },
     {
+      "login": "yves-renier",
+      "name": "Yves Renier",
+      "avatar_url": "https://avatars.githubusercontent.com/u/102358016?v=4",
+      "profile": "https://github.com/yves-renier",
+      "contributions": [
+        "doc",
+        "test",
+        "content"
+      ]
+    },
+    {
       "login": "TheBeardedBerserkr",
       "name": "TheBeardedBerserkr",
       "avatar_url": "https://avatars.githubusercontent.com/u/32272268?v=4",
