--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ isolated_build = True
 [testenv]
 extras =
     test
+    erdantic
 commands =
     {envpython} -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
     coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest -vv
@@ -46,19 +47,15 @@ description = "Test the latest stable versions available from PyPI."
 extras =
     test
     docs
+    erdantic
 
 [testenv:no_erdantic]
 description = "Test without optional erdantic dependency"
-commands =
-    pip uninstall erdantic
-    {envpython} -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
-    pytest -vv
-
-[testenv:development]
-description = "Test the most recent development versions from git repositories."
 extras =
     test
 
+[testenv:development]
+description = "Test the most recent development versions from git repositories."
 deps =
     git+https://github.com/samuelcolvin/pydantic.git
     git+https://github.com/sphinx-doc/sphinx.git
