--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,7 +1,14 @@
 version: 2
 
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.10"
+  jobs:
+    pre_install:
+      - sudo apt-get install graphviz graphviz-dev
+
 python:
-  version: 3.7
   install:
     - method: pip
       path: .
