--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -75,6 +75,10 @@ jobs:
       - run: sudo apt-get install graphviz graphviz-dev
       - run: pip install tox
       - run: tox -e pydantic${{ matrix.pydantic_version }}-sphinx${{ matrix.sphinx_version }}
+      - name: Codecov
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          fail_ci_if_error: true
 
   test-latest-version:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
