--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ include = ["sphinxcontrib/autodoc_pydantic/css/autodoc_pydantic.css"]
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0.0"
 Sphinx = ">=3.4"
-pydantic = ">=1.5"
+pydantic = ">=1.5,<2.0.0"
 
 sphinx-rtd-theme = { version = "^1.0", optional = true }
 sphinx-tabs = { version = "^3", optional = true }
