--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ include = ["sphinxcontrib/autodoc_pydantic/css/autodoc_pydantic.css"]
 python = ">=3.7.2,<4.0.0"
 Sphinx = ">=4.0"
 pydantic = ">=2.0,<3.0.0"
+pydantic-settings = ">=2.0,<3.0.0"
 
 sphinx-rtd-theme = { version = "^1.0", optional = true }
 sphinx-tabs = { version = "^3", optional = true }
