--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ Sphinx = ">=4.0"
 pydantic = ">=2.0,<3.0.0"
 pydantic-settings = ">=2.0,<3.0.0"
 
+importlib-metadata = { version = "^6.8", markers = "python_version <= '3.8'" }
+
 sphinx-rtd-theme = { version = "^1.0", optional = true }
 sphinx-tabs = { version = "^3", optional = true }
 sphinx-copybutton = { version = "^0.4", optional = true }
