--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           fail_ci_if_error: true
 
-  test-special-version:
+  test-no-erdantic-version:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     environment: ci
     runs-on: ubuntu-22.04
