Add pydantic 2.1 to test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37,38,39,310,311}-pydantic{20,latest}-sphinx{40,45,53,62,70,latest}, latest, development, no_erdantic, linter
+envlist = py{37,38,39,310,311}-pydantic{20,21,latest}-sphinx{40,45,53,62,70,latest}, latest, development, no_erdantic, linter
 isolated_build = True
 
 [testenv]
@@ -12,10 +12,11 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:pydantic{20,latest}-sphinx{40,45,53,62,70,latest}]
+[testenv:pydantic{20,21,latest}-sphinx{40,45,53,62,70,latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic20: pydantic~=2.0.0
+    pydantic21: pydantic~=2.1.0
     pydanticlatest: pydantic
     sphinx40: sphinx~=4.0.0
     sphinx45: sphinx~=4.5.0
