--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,6 +33,9 @@ jobs:
           - python_version: "3.11"
             pydantic_version: "20"
             sphinx_version: "70"
+          - python_version: "3.11"
+            pydantic_version: "21"
+            sphinx_version: "70"
 
     runs-on: ubuntu-22.04
     steps:
