Add new sphinx/pydantic versions to test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37,38,39,310,311}-pydantic{20,21,latest}-sphinx{40,45,53,62,70,latest}, latest, development, no_erdantic, linter
+envlist = py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,latest}-sphinx{40,45,53,62,70,71,72,latest}, latest, development, no_erdantic, linter
 isolated_build = True
 
 [testenv]
@@ -12,17 +12,23 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:pydantic{20,21,latest}-sphinx{40,45,53,62,70,latest}]
+[testenv:pydantic{20,21,22,23,24,25,latest}-sphinx{40,45,53,62,70,71,72,latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic20: pydantic~=2.0.0
     pydantic21: pydantic~=2.1.0
+    pydantic22: pydantic~=2.2.0
+    pydantic23: pydantic~=2.3.0
+    pydantic24: pydantic~=2.4.0
+    pydantic25: pydantic~=2.5.0
     pydanticlatest: pydantic
     sphinx40: sphinx~=4.0.0
     sphinx45: sphinx~=4.5.0
     sphinx53: sphinx~=5.3.0
     sphinx62: sphinx~=6.2.0
     sphinx70: sphinx~=7.0.0
+    sphinx71: sphinx~=7.1.0
+    sphinx72: sphinx~=7.2.0
     sphinxlatest: sphinx
 
 [testenv:latest]
