Fix path issue with newer sphinx versions.

--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,9 @@ ipython_config.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
+# poetry
+poetry.lock 
+
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
