--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,8 @@ deps =
     pydantic24: pydantic~=2.4.0
     pydantic25: pydantic~=2.5.0
     pydanticlatest: pydantic
-    sphinx40: sphinx~=4.0.0;sphinxcontrib-applehelp==1.0.4
-    sphinx45: sphinx~=4.5.0;sphinxcontrib-applehelp==1.0.4
+    sphinx40: sphinx~=4.0.0
+    sphinx45: sphinx~=4.5.0
     sphinx53: sphinx~=5.3.0
     sphinx62: sphinx~=6.2.0
     sphinx70: sphinx~=7.0.0
