--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,6 @@ isolated_build = True
 [testenv]
 extras =
     test
-    erdantic
 commands =
     {envpython} -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
     coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest -vv
@@ -22,8 +21,23 @@ deps =
     pydantic24: pydantic~=2.4.0
     pydantic25: pydantic~=2.5.0
     pydanticlatest: pydantic
+
+    ; pins for sphinx 4.X compatibility from 
+    ; https://github.com/sphinx-doc/sphinx/issues/11890
     sphinx40: sphinx~=4.0.0
+    sphinx40: sphinxcontrib-applehelp==1.0.4
+    sphinx40: sphinxcontrib-devhelp==1.0.2
+    sphinx40: sphinxcontrib-htmlhelp==2.0.1
+    sphinx40: sphinxcontrib-qthelp==1.0.3
+    sphinx40: sphinxcontrib-serializinghtml==1.1.5
+
     sphinx45: sphinx~=4.5.0
+    sphinx45: sphinxcontrib-applehelp==1.0.4
+    sphinx45: sphinxcontrib-devhelp==1.0.2
+    sphinx45: sphinxcontrib-htmlhelp==2.0.1
+    sphinx45: sphinxcontrib-qthelp==1.0.3
+    sphinx45: sphinxcontrib-serializinghtml==1.1.5
+
     sphinx53: sphinx~=5.3.0
     sphinx62: sphinx~=6.2.0
     sphinx70: sphinx~=7.0.0
