accidentally removed erdantic from base testenv

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ isolated_build = True
 [testenv]
 extras =
     test
+    erdantic
 commands =
     {envpython} -c "from sphinxcontrib.autodoc_pydantic.utility import show_versions; show_versions()"
     coverage run --source "sphinxcontrib/autodoc_pydantic" -m pytest -vv
